main/interfaces/Plush/templates/static/stylesheets/plush-default.css
/* ... */
.queue_pill_l {display:inline; background: url(../images/plush_default/q_pill_l.png) 0 0 no-repeat;padding-left:9px;}
.queue_pill_m {display:inline; background: url(../images/plush_default/q_pill_m.png) 0 0 repeat-x; width:100px; }
.queue_pill_r {display:inline; background: url(../images/plush_default/q_pill_r.png) 100% 0 no-repeat; height:51px;}


.queueTable {
	border-spacing: 0;
	width: 100%;
	color: #606060;
}
.queueTable tr {
	background: url(../images/plush_default/ql_row.png) 0 0 repeat-x;
	height: 31px;
}
.queueTable tr:hover {
	background: url(../images/plush_default/ql_row_on.png) 0 0 repeat-x;
	color: #000;
}
.queueTable td {
	vertical-align: middle;
	padding:2px 0;
}
.queueTable .title {
	padding-left:30px;
	background: url(../images/plush_default/ql_grip.png) 4px 50% no-repeat;
}
.queueTable tr:hover .title {
	background: url(../images/plush_default/ql_grip_on.png) 4px 50% no-repeat;
}
.queueTable .historyTitleLoaded {
	padding-left:30px;
	background: url(../images/plush_default/hl_loaded.gif) 10px 50% no-repeat;
}
.queueTable .historyTitleCheck {
	padding-left:30px;
	background: url(../images/plush_default/hv_ok.png) 7px 50% no-repeat;
}
.queueTable .historyTitleCross {
	padding-left:30px;
	background: url(../images/plush_default/hv_error.png) 7px 50% no-repeat;
}
.queueTable a {
	text-decoration: none;
	color: #606060;
}
.queueTable tr:hover a {
	color: #000;
}
.queueTable a:hover {
	border-bottom: 1px dotted #606060;
	cursor: pointer;
}
.queueTable .eta {
	text-align: center;
	font-size: 66%;
}
.queueTable select {
	border:0px;
	font-size: 66%;
	background-color: #E0E0E0;
	color: #606060;
}
.queueTable tr:hover select {
	color: #000;
}

.queueProgressBarContainer {
	width:121px;
	background-image: url(../images/plush_default/ql_pbar_empty.png);
	background-repeat: no-repeat;
	background-position: left center;
}
.queueProgressBar {
	background-image: url(../images/plush_default/ql_pbar_full.png);
	background-repeat: no-repeat;
	height: 15px;
	width: 121px;
	margin: 2px 0 0 1px;
/*	overflow:hidden;*/
}

.currentDownload, .totalDownload { font-size: 9px; color: #000; z-index: 1; margin-top:2px;}
.currentDownload { float: left; margin-left: 3px;}
.totalDownload { float:right; margin-right: 3px;}


.options {
	text-align:right;
	padding-right:8px;
}
.queue_delete {
	display:inline;
	float:right;
	margin-left:10px;
	margin-right: 5px;
}
.queueTable tr:hover .queue_delete {
	background: url(../images/plush_default/ql_cross.png) 50% 50% no-repeat;
}
.queueTable td:hover .queue_delete {
	background: url(../images/plush_default/ql_cross_on.png) 50% 50% no-repeat;
	cursor:pointer;
}
.history_added {
	font-size:75%;
	cursor:default;
}
tr:hover .history_added  {
	color:black;
}
.last div {
	cursor: help;
	display:inline;
	padding-left:16px;
}
.hv_Tim {
	background: url(../images/plush_default/hv_timetaken.png) 0 50% no-repeat;
}
.hv_Avg {
	background: url(../images/plush_default/hv_avgspeed.png) 0 50% no-repeat;
}
.hv_PAR {
	background: url(../images/plush_default/hv_par.png) 0 50% no-repeat;
}
.hv_JOI {
	background: url(../images/plush_default/hv_join.png) 0 50% no-repeat;
}
.hv_RAR {
	background: url(../images/plush_default/hv_unrar.png) 0 50% no-repeat;
}
.hv_ZIP {
	background: url(../images/plush_default/hv_unzip.png) 0 50% no-repeat;
}
.hv_DEL {
	background: url(../images/plush_default/hv_del.png) 0 50% no-repeat;
}
.hv_USE {
	display:inline;
	background: url(../images/plush_default/hv_userscript.png) 0 50% no-repeat;
}


.hvMessage {
	font-weight: bold;
	color: red;
	font-size: 60%;
}





#page-wrap { width: 90%; margin: 0px auto; }
.box_banner_hr {
	background: #cfcfcf url(../images/plush_default/qh_seperator.png) 0 0 repeat-x;
	height:4px;
}
.box_banner_history {background-image: url(../images/plush_default/history_tile.png); background-repeat: repeat-x; height: 51px; width: 100%; background-position: -2px 0;}
.box_banner_r {
	background-image: url(../images/plush_default/history_title_bg.png);
	background-position: left center;
	background-repeat:no-repeat;
	height:51px;
}
#hdr-queue { background-image: url(../images/plush_default/queue_bg_tile.png); background-repeat: repeat-x; height: 55px; }
#hdr-queue .logo { background-image: url(../images/plush_default/hdr_queue.png); background-position: left top; background-repeat: no-repeat; height: 55px; width: 178px; float: left;}
#hdr-queue .logo h1 { text-indent: -9999px; margin: 0; padding: 0;}
#queue-buttons { float: right; background-image: url(../images/plush_default/queue_bg.png); background-position: top right; background-repeat: no-repeat; height: 35px; padding-top: 20px;}
#queue-buttons li { float:left; }
#queue-wrap { background-color: #cfcfcf; padding: 0 3px; }
#speed, #time-left {
	background-image: url(../images/plush_default/rounded_area_bg.png);
	width: 68px;
	height: 12px;
	padding: 5px 0px;
	margin-top: 20px;
	text-align: center;
}
#speed { float:right; margin-right: 10%; }
#time-left { float:left; margin-left: 8%; }
#speed p, #time-left p { font-size: 9px; color: #7c7c7c; }
#speed span, #time-left span { font-size: 11px; color: #dadada; font-weight: bold; }
#btm-wrapper { height: 9px; background-color: #cfcfcf; clear:both;}
#btm-wrapper .corner-right { float:right; background-image: url(../images/plush_default/btm_corner_right.png); background-repeat:no-repeat; height: 9px; width: 12px;}
#btm-wrapper .corner-left { float:left; background-image: url(../images/plush_default/btm_corner_left.png); background-repeat: no-repeat; height: 9px; width: 12px; }
/* ... */

